# UniversityCalendarAutomation

./: .gitignore  Create_embeddedGoogleCalendar.py  Dockerfile  Procfile  README.md  app.py  conta_principal.py  create_calendar.py  debug.ipynb  fly.toml  forms.py  googleCalendar.py  package-lock.json  pyproject.toml  requirements.txt
back/: _test.py  app.py  generateIcal.py  parseCalendarText.py  teste.py
back/database/: counter.py
back/googleCalendar/: generateGoogleCalendar.py
back/util/: debug.ipynb
front/UniversityCalendarAutomation/: index.html  package-lock.json  package.json
front/UniversityCalendarAutomation/src/: App.jsx  App.module.css  CalendarRoute.jsx  CalendarRoute.module.css  EmbeddedGoogleCalendar.jsx  Loading.jsx  Loading.module.css  main.jsx
front/UniversityCalendarAutomation/src/services/: services.jsx
templates/: base.html  calendario.html  home.html
token files/: token_calendar_v3.pickle
