[tool.poetry]
name = "calendarioufpel"
version = "0.1.0"
description = "web application to help college students from UFPEL to add their classes on a calendar service like google calendar"
authors = ["kevin weitgenant <kevin.weitgenant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
icalendar = "^5.0.10"
datetime = "^5.2"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
uuid = "^1.30"
google-auth = "^2.23.3"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
google-api-python-client = "^2.104.0"
httplib2 = "^0.22.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
redis = "^5.0.1"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
